--- a/resources/style.css
+++ b/resources/style.css
@@ -3,17 +3,29 @@
   font-size: 14px;
   font-weight: bold;
   display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
 }
 
-.header,.logo,p {
+.header,.logo {
   color: mediumaquamarine;
 }
 
 .logo {
-  display: inline-flex;
-  justify-content: center;
+  display: flex;
+  align-items: center;
+
 }
 
 .navi {
-  display: flex;
+  align-items: center;
+
+}
+
+.button{
+  display: inline-block;
+  align-items: center;
+  padding: 20px 10px;
+
 }
