--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,6 @@
 /* header style */
 
-.header{
+header{
   font-family: verdana;
   font-size: 14px;
   font-weight: bold;
@@ -8,9 +8,10 @@
   width: 100%;
   justify-content: space-between;
   border-bottom: 1px solid black;
+  background-color: white;
 }
 
-.header,.logo {
+header.logo {
   color: mediumaquamarine;
 }
 
@@ -34,45 +35,124 @@
 
 .maincontent {
   display: flex;
-  border: 1px solid black;
-  margin: 20px 15px;
+  justify-content: space-around;
+
+  margin: 80px 15px 20px 15px;
 }
+
+
+/* colums */
 
 .column.large {
   display: flex;
-  border: 1px solid black;
   width: 630px;
   flex-direction: column;
+  margin: 10px;
 }
 
 .column.medium {
   display: flex;
-  border: 1px solid black;
   width: 300px;
   flex-direction: column;
+  margin: 10px;
 }
 
 .column.small {
   display: flex;
-  border: 1px solid black;
   width: 240px;
   flex-direction: column;
+  margin: 10px;
 }
 
-.image1 {
-  border: 1px solid black;
+/* image divs */
+
+.image {
+
 }
+
+.headerimage {
+  display: flex;
+
+  background-image: url(./images/main.png);
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+  height: 300px;
+
+}
+
+.image.one {
+  display: flex;
+  background-image: url(./images/fallstory.png);
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  height: 300px;
+  text-align: center;
+
+}
+ .image.two {
+   display: flex;
+   background-image: url(./images/hipster.png);
+   font-family: Georgia;
+   font-weight: bold;
+   font-size: 30px;
+   color: white;
+   height: 300px;
+   text-align: center;
+ }
+ .image.three {
+   display: flex;
+   background-image: url(./images/catlogo.png);
+   font-family: Georgia;
+   font-weight: bold;
+   font-size: 30px;
+   color: white;
+   height: 300px;
+   text-align: center;
+ }
+
+/* text divs  */
+
 .newsbites {
-  border: 1px solid black;
+
 }
 
-.story1 {
-  border: 1px solid black;
+.story {
+  font-family: Georgia;
+  font-size: 16px;
+  color: black;
+  height: 250px;
+}
+.storycolumn {
+  display: flex;
+  justify-content: space-between;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+.story.four{
+  height: auto;
+}
+.newsbites{
+  display: flex;
+  flex-direction: column;
+}
+.newsbites h2 {
+  font-size: 16px;
+  font-weight: bold;
 }
 
-.story2 {
-  border: 1px solid black;
-}
-.image1 {
-  border: 1px solid black;
+.newsbites p{
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  padding: 11px 20px;
+  margin: 0px;
+  border-bottom: 1px solid black;
 }
